# community_kv

./: .gitignore  README.md  pyproject.toml  setup.py
community_kv/: __init__.py  cache.py  community_kv_attention.py  graph.py
community_kv/attention/: __init__.py  community_kv.py  flash-attention.patch  fused_attn_fwd_topk.py
community_kv/graph/: __init__.py  manager.py  partition.py  runtime.py  state.py  utils.py  workers.py
community_kv/graph/_leiden/: __init__.py
community_kv/graph/_leiden/_csrc/: aggregate.cu  bindings.cpp  csr.cu  helpers.cu  internal.cuh  leiden.cu  leiden.cuh  local_moving.cu  refinement.cu  rng.cuh
community_kv/kernels/: attention_topk.py  attention_with_topk.py
evals/: __init__.py  distributed.py  main.py  resolutions.json  resolutions.py  runner.py  utils.py
evals/datasets/: __init__.py  babilong.py  dataset.py  longbench_v2.py
evals/models/: __init__.py  loader.py
tests/: conftest.py
tests/community_kv/attention/: test_community_kv.py  test_fused_attn_fwd_topk.py
tests/community_kv/graph/: test_leiden.py  test_partition.py  test_runtime.py  test_state.py  test_workers.py
tests/evals/: test_distributed.py  test_resolutions.py  test_utils.py
tests/evals/datasets/: test_babilong.py  test_dataset.py  test_longbench_v2.py
tests/graph/: test_manager.py  test_utils.py
tests/kernels/: test_attention_with_topk.py
