[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "community-kv"
version = "0.0.1"
description = "CommunityKV: Efficient Long-Context Decoding via Graph Partitioning"
requires-python = ">=3.10"
dependencies = [
    "torch==2.9.0",
    "triton==3.5.0",
    "datasets==4.8.5",
    "python-igraph>=0.11.0",
    "transformers==5.7.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
# Installing cugraph/cudf requires the NVIDIA pip index, e.g.:
#   pip install -e '.[cugraph]' --extra-index-url=https://pypi.nvidia.com
cugraph = ["cugraph-cu12", "cudf-cu12"]

[tool.setuptools.packages.find]
include = ["community_kv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
